--- a/app/src/main/res/menu/forcast_fragment.xml
+++ b/app/src/main/res/menu/forcast_fragment.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="1"
         android:title="@string/refresh"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="1"
+        android:title="@string/settings"
+        app:showAsAction="never" />
 </menu>
